package edu.hitsz.enemyfactory;

import edu.hitsz.aircraft.AbstractEnemyAircraft;

public interface EnemyAircraftCreator{
    public AbstractEnemyAircraft Create();
}
